apps/minecraft/vanilla/app/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft-vanilla
  labels:
    app: minecraft-vanilla
  namespace: minecraft
spec:
  serviceName: minecraft-vanilla
  selector:
    matchLabels:
      app: minecraft-vanilla
  template:
    metadata:
      labels:
        app: minecraft-vanilla
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - ananke
      containers:
        - name: mc
          image: itzg/minecraft-server:java17
          ports:
            - containerPort: 25565
          volumeMounts:
            - mountPath: /data
              name: data
          readinessProbe: # mc-health instead of mc-status
            exec:
              command:
                - mc-health
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 18
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vanilla-data
