apps/minecraft/vanilla/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-bluemap-ingress
  namespace: minecraft
  annotations:
    external-dns.alpha.kubernetes.io/my-target: internal
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,fd48:e380:751a::/48
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bluemap.k8s.jsteuernagel.de
      secretName: bluemap-k8s-jsteuernagel-de-tls
  rules:
    - host: bluemap.k8s.jsteuernagel.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-vanilla-bluemap
                port:
                  number: 8100
